--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -9,6 +9,9 @@ $color-black: #23272A;
 }
 
 @mixin default-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 14px;
     padding: 0 25px;
     height: 40px;
