fix: avoid empty searches

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -53,3 +53,17 @@ $color-black: #23272A;
         @content;
     }
 }
+
+@keyframes shake-input {
+    0% {
+        margin-left: 0;
+    } 25% {
+        margin-left: 30px;
+    } 50% {
+        margin-left: 0;
+    } 75% {
+        margin-left: 15px;
+    } 100% {
+        margin-left: 0;
+    }
+}
